RESOLVED FIXED283937
[JSC] Should replace SameValue with CompareStrictEq since it cannot handle BooleanUse and Int32Use
https://bugs.webkit.org/show_bug.cgi?id=283937
Summary [JSC] Should replace SameValue with CompareStrictEq since it cannot handle Bo...
Yijia Huang
Reported 2024-12-02 13:35:05 PST
Attachments
Yijia Huang
Comment 1 2024-12-02 13:45:22 PST
EWS
Comment 2 2024-12-02 23:46:51 PST
Committed 287261@main (e21746365a84): <https://commits.webkit.org/287261@main> Reviewed commits have been landed. Closing PR #37342 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.