[JSC] Should replace SameValue with CompareStrictEq since it cannot handle BooleanUse and Int32Use https://bugs.webkit.org/show_bug.cgi?id=283937 rdar://140477242

Reviewed by Yusuke Suzuki.

SameValue cannot handle BooleanUse and Int32Use edges. So, the
optimization in the DFGStrengthReductionPhase for SameValue is
wrong. To fix that, we should convert SameValue to CompareStrictEq
since both of them have the same semantics for BooleanUse and Int32Use
and CompareStrictEq has the correct handle for those two use kinds.

* Source/JavaScriptCore/dfg/DFGStrengthReductionPhase.cpp:
(JSC::DFG::StrengthReductionPhase::handleNode):

Canonical link: https://commits.webkit.org/287261@main